# PluckyPoroAntiCheat

./: Cargo.toml  README.md
plucky-poro-anti-cheat/: Cargo.toml  build.rs
plucky-poro-anti-cheat-common/: Cargo.toml
plucky-poro-anti-cheat-common/src/: lib.rs
plucky-poro-anti-cheat-ebpf/: Cargo.toml
plucky-poro-anti-cheat-ebpf/src/: main.rs
plucky-poro-anti-cheat/src/: main.rs  server.rs
tests/: attacker_ptrace.py  attacker_vm_read.py  run_verification.sh  victim  victim.c
