[package]
name = "plucky-poro-anti-cheat-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
plucky-poro-anti-cheat-common = { path = "../plucky-poro-anti-cheat-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "plucky-poro-anti-cheat"
path = "src/main.rs"
