[package]
name = "plucky-poro-anti-cheat"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
plucky-poro-anti-cheat-common = { path = "../plucky-poro-anti-cheat-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
bytes = "1"
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
plucky-poro-anti-cheat-ebpf = { path = "../plucky-poro-anti-cheat-ebpf" }

[[bin]]
name = "plucky-poro-anti-cheat"
path = "src/main.rs"

[[bin]]
name = "plucky-poro-server"
path = "src/server.rs"
